[metadata]
name = rainbowed-iwas
version = 1.0.0
author = Wasym Atieh Alonso
author_email = wasymatieh01@gmail.com
description = A tiny module to simply import colors in Python's stdout.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://iwas-coder.github.io/rainbowed
project_urls =
	Repository = https://github.com/iwas-coder/rainbowed
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
